show more button jumping fix

--- a/src/scss/User/User.scss
+++ b/src/scss/User/User.scss
@@ -7,6 +7,8 @@
     margin: 0 auto 15px;
     max-width: 71px;
     max-height: 71px;
+    min-width: 71px;
+    min-height: 71px;
     height: 100%;
     width: 100%;
     border-radius: 50%;
